--- a/Média_de_nota.ipynb
+++ b/Média_de_nota.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Média de nota.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyMugvPNL7agLQZt8sHD9wmv",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/MarceloMiranda7/Phyton_Studies/blob/main/M%C3%A9dia_de_nota.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
